--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-fileupload": "^1.4.0",
     "pg": "^8.11.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
